--- a/prediction/templates/prediction/register.html
+++ b/prediction/templates/prediction/register.html
@@ -6,7 +6,7 @@
         <form method="post">
             {% csrf_token %}
             <div class="mb-4">
-                <label for="username" class="block text-gray-700">Nom d’utilisateur</label>
+                <label for="username" class="block text-gray-700">Nom d'utilisateur</label>
                 <input type="text" name="username" id="username" class="w-full p-2 border rounded" required>
             </div>
             <div class="mb-4">
@@ -17,7 +17,7 @@
                 <label for="password" class="block text-gray-700">Mot de passe</label>
                 <input type="password" name="password" id="password" class="w-full p-2 border rounded" required>
             </div>
-            <button type="submit" class="btn-primary w-full">S’inscrire</button>
+            <button type="submit" class="btn-primary w-full">S'inscrire</button>
         </form>
     </div>
 {% endblock %}
